# Machine-Learning-Mastery

./: .gitignore  MASTER_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  env-setup.md  generate_modules.py  pyproject.toml
00-python-fundamentals/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
01-linear-algebra/: COMPLETE.md  MODULE_STATUS.md  README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
02-calculus/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
03-probability/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
04-statistics/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
05-optimization/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
06-ml-foundations/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
07-supervised-learning/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
08-unsupervised-learning/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
09-feature-engineering/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
10-model-evaluation/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
11-deep-learning/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
12-neural-networks-from-scratch/: README.md  examples.py  exercises.py  problems.md  solutions.py  theory.md
13-pytorch-masterclass/: README.md  examples.py  (+4 more)
(+34 files in other folders)
