[project]
name = "machine-learning-mastery"
version = "1.0.0"
description = "Complete ML Mastery: Mathematics, Intuition, Python, Deep Learning, and Real-World Engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "rich>=13.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "plotly>=5.14.0",
    "opencv-python>=4.8.0",
    "nltk>=3.8.0",
    "transformers>=4.30.0",
    "tensorboard>=2.13.0",
    "mlflow>=2.5.0",
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]
